--- a/client/src/App.css
+++ b/client/src/App.css
@@ -32,6 +32,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
@@ -42,4 +43,15 @@
   align-items: center;
   justify-content: space-evenly;
   flex-direction: column;
+}
+
+.buttonGroup {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+.buttonGroup button {
+  margin-right: 10px;
 }
